# crypto-copilot

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_indicator_snapshot_unique_constraint.py  0003_ai_trade_review_json.py  0004_trading_plans.py  0005_transaction_time_reviews.py  0006_crypto_baskets.py  0007_rule_only_reviews.py
backend/app/: __init__.py  main.py
backend/app/api/routes/: crypto_basket.py  mexc.py  trades.py  (+1 more)
backend/app/core/: config.py  constants.py  security.py  time.py
backend/app/db/: models.py  session.py
backend/app/schemas/: crypto_basket.py  indicators.py  mexc.py  trades.py  trading_plan.py
backend/app/services/: ai_review_engine.py  candle_service.py  crypto_basket_scheduler.py  crypto_basket_service.py  indicator_engine.py  mexc_client.py  mexc_importer.py  position_context.py  position_reconstructor.py  risk_engine.py  trade_metadata_service.py  trading_plan_service.py
backend/app/tests/: test_ai_review_engine.py  test_candle_service.py  test_config.py  test_cors.py  test_crypto_basket_routes.py  test_crypto_basket_scheduler.py  test_crypto_basket_service.py  test_dashboard_analytics.py  test_health.py  test_indicator_engine.py  test_mexc_client_parsing.py  test_mexc_importer.py  test_mexc_routes.py  test_mexc_signing.py  test_position_reconstructor.py  test_trade_metadata_service.py  test_trade_routes.py  test_trading_plan_service.py
backend/crypto_copilot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+39 files in other folders)
